updated dataframe with ratio column

--- a/occupancy-prediction.ipynb
+++ b/occupancy-prediction.ipynb
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -187,144 +187,165 @@
        "      <th></th>\n",
        "      <th>timeunit</th>\n",
        "      <th>timestep</th>\n",
+       "      <th>ratio</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0.5</td>\n",
-       "      <td>250.982143</td>\n",
+       "      <td>250.98</td>\n",
+       "      <td>501.96</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1.0</td>\n",
-       "      <td>321.964286</td>\n",
+       "      <td>321.96</td>\n",
+       "      <td>321.96</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1.5</td>\n",
-       "      <td>392.946429</td>\n",
+       "      <td>392.95</td>\n",
+       "      <td>261.96</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2.0</td>\n",
-       "      <td>463.928571</td>\n",
+       "      <td>463.93</td>\n",
+       "      <td>231.96</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2.5</td>\n",
-       "      <td>534.910714</td>\n",
+       "      <td>534.91</td>\n",
+       "      <td>213.96</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>3.0</td>\n",
-       "      <td>605.892857</td>\n",
+       "      <td>605.89</td>\n",
+       "      <td>201.96</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>3.5</td>\n",
-       "      <td>676.875000</td>\n",
+       "      <td>676.88</td>\n",
+       "      <td>193.39</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>4.0</td>\n",
-       "      <td>747.857143</td>\n",
+       "      <td>747.86</td>\n",
+       "      <td>186.96</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>4.5</td>\n",
-       "      <td>818.839286</td>\n",
+       "      <td>818.84</td>\n",
+       "      <td>181.96</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>5.0</td>\n",
-       "      <td>889.821429</td>\n",
+       "      <td>889.82</td>\n",
+       "      <td>177.96</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>5.5</td>\n",
-       "      <td>960.803571</td>\n",
+       "      <td>960.80</td>\n",
+       "      <td>174.69</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>6.0</td>\n",
-       "      <td>1031.785714</td>\n",
+       "      <td>1031.79</td>\n",
+       "      <td>171.96</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>6.5</td>\n",
-       "      <td>1102.767857</td>\n",
+       "      <td>1102.77</td>\n",
+       "      <td>169.66</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>7.0</td>\n",
-       "      <td>1173.750000</td>\n",
+       "      <td>1173.75</td>\n",
+       "      <td>167.68</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>7.5</td>\n",
-       "      <td>1244.732143</td>\n",
+       "      <td>1244.73</td>\n",
+       "      <td>165.96</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
        "      <td>8.0</td>\n",
-       "      <td>1315.714286</td>\n",
+       "      <td>1315.71</td>\n",
+       "      <td>164.46</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
        "      <td>8.5</td>\n",
-       "      <td>1386.696429</td>\n",
+       "      <td>1386.70</td>\n",
+       "      <td>163.14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
        "      <td>9.0</td>\n",
-       "      <td>1457.678571</td>\n",
+       "      <td>1457.68</td>\n",
+       "      <td>161.96</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
        "      <td>9.5</td>\n",
-       "      <td>1528.660714</td>\n",
+       "      <td>1528.66</td>\n",
+       "      <td>160.91</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
        "      <td>10.0</td>\n",
-       "      <td>1599.642857</td>\n",
+       "      <td>1599.64</td>\n",
+       "      <td>159.96</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    timeunit     timestep\n",
-       "0        0.5   250.982143\n",
-       "1        1.0   321.964286\n",
-       "2        1.5   392.946429\n",
-       "3        2.0   463.928571\n",
-       "4        2.5   534.910714\n",
-       "5        3.0   605.892857\n",
-       "6        3.5   676.875000\n",
-       "7        4.0   747.857143\n",
-       "8        4.5   818.839286\n",
-       "9        5.0   889.821429\n",
-       "10       5.5   960.803571\n",
-       "11       6.0  1031.785714\n",
-       "12       6.5  1102.767857\n",
-       "13       7.0  1173.750000\n",
-       "14       7.5  1244.732143\n",
-       "15       8.0  1315.714286\n",
-       "16       8.5  1386.696429\n",
-       "17       9.0  1457.678571\n",
-       "18       9.5  1528.660714\n",
-       "19      10.0  1599.642857"
+       "    timeunit  timestep   ratio\n",
+       "0        0.5    250.98  501.96\n",
+       "1        1.0    321.96  321.96\n",
+       "2        1.5    392.95  261.96\n",
+       "3        2.0    463.93  231.96\n",
+       "4        2.5    534.91  213.96\n",
+       "5        3.0    605.89  201.96\n",
+       "6        3.5    676.88  193.39\n",
+       "7        4.0    747.86  186.96\n",
+       "8        4.5    818.84  181.96\n",
+       "9        5.0    889.82  177.96\n",
+       "10       5.5    960.80  174.69\n",
+       "11       6.0   1031.79  171.96\n",
+       "12       6.5   1102.77  169.66\n",
+       "13       7.0   1173.75  167.68\n",
+       "14       7.5   1244.73  165.96\n",
+       "15       8.0   1315.71  164.46\n",
+       "16       8.5   1386.70  163.14\n",
+       "17       9.0   1457.68  161.96\n",
+       "18       9.5   1528.66  160.91\n",
+       "19      10.0   1599.64  159.96"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.DataFrame(extrapolated_list, columns=['timeunit','timestep'])"
+    "pd.DataFrame(extrapolated_list, columns=['timeunit','timestep']).eval('ratio = timestep / timeunit').round(2)"
    ]
   },
   {
