added notes for sample chart at the end

--- a/occupancy-prediction.ipynb
+++ b/occupancy-prediction.ipynb
@@ -6647,7 +6647,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "generate a plot showing a comparison of `real` vs `simulated` occupancy (but not `Diff`) where `Diff` is small"
+    "generate a plot showing a comparison of `real` vs `simulated` occupancy (but not `Diff`) where `Diff` is small\n",
+    "params:\n",
+    "- data `full_comp_for_chart.csv`\n",
+    "- `timestep` == 1650\n",
+    "- `idx` roughly [2000:2200]"
    ]
   },
   {
