prettied it up.

--- a/code-parser-translation.ipynb
+++ b/code-parser-translation.ipynb
@@ -103,7 +103,10 @@
     "                self.spb = int(spb)\n",
     "                print(f'\\tset samples per bit: {self.spb}')\n",
     "            except Exception:\n",
-    "                print(f'unable to convert provided spb ({type(spb)}) to integer, please provide in integer format')\n",
+    "                print(\n",
+    "                    f'unable to convert provided spb ({type(spb)}) to integer, ' + \n",
+    "                    f'please provide in integer format'\n",
+    "                )\n",
     "                raise\n",
     "                \n",
     "        # header\n",
@@ -118,7 +121,10 @@
     "                self.header = header\n",
     "                print(f'\\tset header: {self.header}')\n",
     "            else:\n",
-    "                print(f'invalid header format specified ({type(header)}), must be np.array or list')\n",
+    "                print(\n",
+    "                    f'invalid header format specified ({type(header)}), ' + \n",
+    "                    f'must be np.array or list'\n",
+    "                )\n",
     "                raise TypeError\n",
     "                \n",
     "        # startup tasks\n",
@@ -158,9 +164,17 @@
     "                self.parsed_lvm_path = output_path\n",
     "                \n",
     "                if isinstance(parsed_lvm_path, Path):\n",
-    "                    assert str(parsed_lvm_path).endswith('.csv'), 'output file must end with .csv'\n",
+    "                    try:\n",
+    "                        assert str(parsed_lvm_path).endswith('.csv')\n",
+    "                    except AssertionError:\n",
+    "                        print('output file must end with .csv')\n",
+    "                        raise\n",
     "                elif isinstance(parsed_lvm_path, str):\n",
-    "                    assert parsed_lvm_path.endswith('.csv'), 'output file must end with .csv'\n",
+    "                    try:\n",
+    "                        assert parsed_lvm_path.endswith('.csv')\n",
+    "                    except AssertionError:\n",
+    "                        print('output file must end with .csv')\n",
+    "                        raise\n",
     "                else:\n",
     "                    print('error, output_path must be str or pathlib.Path object')\n",
     "                    raise TypeError\n",
@@ -214,7 +228,10 @@
     "        try:\n",
     "            assert self.data.sum() == shape_check            \n",
     "        except AssertionError:\n",
-    "            print(f'error: sum of 1\\'s ({self.data.sum()}) does not match number of entries >= th ({shape_check})')\n",
+    "            print(\n",
+    "                f'error: sum of 1\\'s ({self.data.sum()}) does not match ' + \n",
+    "                f'number of entries >= th ({shape_check})'\n",
+    "            )\n",
     "        \n",
     "        \n",
     "    def get_state_length_list(self, data):\n",
@@ -256,11 +273,55 @@
     "            else:\n",
     "                print('ya done messed up.')\n",
     "        \n",
-    "        self.discretized_array = np.array([item for sublist in discretized_data for item in sublist])\n",
+    "        self.discretized_array = np.array([\n",
+    "            item for sublist \n",
+    "                in discretized_data \n",
+    "            for item in sublist\n",
+    "        ])\n",
     "        print(f'complete, discretized signal: {self.discretized_array.size} entries')\n",
     "        \n",
     "\n",
+    "    def search_sequence_numpy(self, arr, seq):\n",
+    "        \"\"\" \n",
+    "        find sequence in an array \n",
     "    \n",
+    "        Parameters\n",
+    "        ----------    \n",
+    "        arr    : input 1D array\n",
+    "        seq    : input 1D array\n",
+    "    \n",
+    "        Output\n",
+    "        ------    \n",
+    "        Output : 1D Array of indices in the input array that satisfy the \n",
+    "        matching of input sequence in the input array.\n",
+    "        In case of no match, an empty list is returned.\n",
+    "        \"\"\"\n",
+    "    \n",
+    "        # Store sizes of input array and sequence\n",
+    "        Na, Nseq = arr.size, seq.size\n",
+    "    \n",
+    "        # Range of sequence\n",
+    "        r_seq = np.arange(Nseq)\n",
+    "    \n",
+    "        # Create a 2D array of sliding indices across the entire length of input array.\n",
+    "        # Match up with the input sequence & get the matching starting indices.\n",
+    "        M = (arr[np.arange(Na-Nseq+1)[:,None] + r_seq] == seq).all(1)\n",
+    "    \n",
+    "        # Get the range of those indices as final output\n",
+    "        if M.any() >0:\n",
+    "            return np.where(\n",
+    "                np.convolve(\n",
+    "                    M,\n",
+    "                    np.ones((Nseq), dtype=int)\n",
+    "                ) > 0\n",
+    "            )[0]\n",
+    "        else:\n",
+    "            return []  \n",
+    "    \n",
+    "    def main(self):\n",
+    "        self.discretize_signal()\n",
+    "        \n",
+    "        \n",
     "        "
    ]
   },
@@ -348,255 +409,6 @@
    "source": []
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## data acquisition"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### new lvm parser dev"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def parse_lvm_file(input_path, output_path='auto'):\n",
-    "    \"\"\"\n",
-    "    reads in .lvm file, writes out .csv with column names\n",
-    "    containing only data points\n",
-    "    \n",
-    "    [arguments]\n",
-    "    input_path: str or pathlib.Path object (preferred)\n",
-    "        input file path\n",
-    "    output_path: 'auto' (preferred) or str or pathlib.Path object\n",
-    "        if auto:\n",
-    "            appends _parsed.csv to end of input file name\n",
-    "        else:\n",
-    "            use provided path, must end in .csv\n",
-    "            \n",
-    "    [returns]\n",
-    "    output_path: pathlib.Path object\n",
-    "        outputs Path object pointing to outputted file   \n",
-    "    \"\"\"\n",
-    "\n",
-    "    with open(lvm_path, 'r') as infile:\n",
-    "        # set output path\n",
-    "        file_name = infile.name\n",
-    "        \n",
-    "        if output_path == 'auto':\n",
-    "            parsed_lvm_path = Path(f'{file_name}_parsed.csv')\n",
-    "        else:\n",
-    "            parsed_lvm_path = output_path\n",
-    "            \n",
-    "            if isinstance(parsed_lvm_path, pathlib.Path):\n",
-    "                assert str(parsed_lvm_path).endswith('.csv'), 'output file must end with .csv'\n",
-    "            elif isinstance(parsed_lvm_path, str):\n",
-    "                assert parsed_lvm_path.endswith('.csv'), 'output file must end with .csv'\n",
-    "            else:\n",
-    "                print('error, output_path must be str or pathlib.Path object')\n",
-    "        \n",
-    "        if not parsed_lvm_path.exists():\n",
-    "            parsed_lvm_path.touch()\n",
-    "        \n",
-    "        # find header, store column names\n",
-    "        while True:\n",
-    "            line = infile.readline()\n",
-    "            \n",
-    "            if line.strip().endswith('Comment'):\n",
-    "                cols = line.split(',')[:-1]\n",
-    "                print(f'columns: {cols}')\n",
-    "                break        \n",
-    "                \n",
-    "        # trim file and write out\n",
-    "        with open(parsed_lvm_path, 'w') as outfile:\n",
-    "            outfile.write(', '.join(cols) + '\\n')\n",
-    "            while True:\n",
-    "                try:\n",
-    "                    outfile.write(next(infile))\n",
-    "                except StopIteration:\n",
-    "                    break\n",
-    "    \n",
-    "    print(f'complete, parsed file saved to: {parsed_lvm_path}')\n",
-    "    \n",
-    "    return parsed_lvm_path"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "parsed_lvm_path = parse_lvm_file(lvm_path, output_path='auto')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### read csv"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "raw_data = np.genfromtxt(\n",
-    "    parsed_lvm_path,\n",
-    "    delimiter=',',\n",
-    "    skip_header=1,\n",
-    "    usecols=(1)\n",
-    ")\n",
-    "\n",
-    "print(f'imported data, {raw_data.size} rows')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## data processing"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### set `1`'s and `0`'s"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "th = max(raw_data) / 2\n",
-    "\n",
-    "shape_check = raw_data[np.where(raw_data >= th)].size\n",
-    "raw_data[np.where(raw_data >= th)] = 1\n",
-    "raw_data[np.where(raw_data < th)] = 0\n",
-    "\n",
-    "# set dtype\n",
-    "raw_data = raw_data.astype('int')\n",
-    "\n",
-    "# validate\n",
-    "# sum of all the ones should equal the number of entries >= th\n",
-    "assert raw_data.sum() == shape_check, 'error: sum of 1\\'s does not match number of entries >= th'"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### discretize signal"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_state_length_list(data):\n",
-    "    '''\n",
-    "    takes data list ([1,1,0,1,0,0,...]) and returns numpy array \n",
-    "    of duration of consecutive bits ([13,245,2588,19,1056,...])\n",
-    "    '''\n",
-    "    \n",
-    "    return np.diff(\n",
-    "        np.where(\n",
-    "            np.concatenate(\n",
-    "                ([data[0]],\n",
-    "                 data[:-1] != data[1:],\n",
-    "                 [0]\n",
-    "                )\n",
-    "            )\n",
-    "        )[0]\n",
-    "    )[::2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([49, 19,  9, 10, 30, 17,  2, 49, 49, 19], dtype=int64)"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "state_lengths = get_state_length_list(DP.raw_data)\n",
-    "state_lengths[:10]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def discretize_signal(raw_data, spb):\n",
-    "    discretized_data = []\n",
-    "    start_bit = raw_data[0]\n",
-    "    alt_bit = 0 if start_bit == 1 else 1\n",
-    "    #print(f'starting bit: {start_bit}, alt bit: {alt_bit}')\n",
-    "    \n",
-    "    \n",
-    "    for i, state in enumerate(state_lengths):\n",
-    "        discretized_state = int(np.round(state / spb))\n",
-    "        #print(f'iter: {i}, discretized state: {discretized_state}')\n",
-    "        \n",
-    "        if i % 2 == 0:\n",
-    "            # start_bit\n",
-    "            discretized_data.append([start_bit for j in range(discretized_state)])\n",
-    "        elif i % 2 == 1:\n",
-    "            # alt_bit\n",
-    "            discretized_data.append([alt_bit for j in range(discretized_state)])\n",
-    "        else:\n",
-    "            print('ya done messed up.')\n",
-    "    \n",
-    "    discretized_array = np.array([item for sublist in discretized_data for item in sublist])\n",
-    "    #print(f'complete, discretized signal: {discretized_array.size} entries')\n",
-    "    \n",
-    "    return discretized_array"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "discretized_array = discretize_signal(raw_data, 92)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "discretized_array[95:150]"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -619,12 +431,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def search_sequence_numpy(arr,seq):\n",
-    "    \"\"\" Find sequence in an array using NumPy only.\n",
+    "def search_sequence_numpy(arr, seq):\n",
+    "    \"\"\" \n",
+    "    find sequence in an array \n",
     "\n",
     "    Parameters\n",
     "    ----------    \n",
