clarified output statements

--- a/code-parser-translation.ipynb
+++ b/code-parser-translation.ipynb
@@ -16,12 +16,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "import numpy as np\n",
+    "import time\n",
     "\n",
     "from tqdm import tqdm_notebook"
    ]
@@ -72,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,11 +254,14 @@
     "    \n",
     "\n",
     "    def discretize_signal(self):\n",
+    "        start_time = time.time()\n",
+    "        print('discretizing signal..')\n",
+    "        \n",
     "        # set params\n",
     "        discretized_data = []\n",
     "        start_bit = self.data[0]\n",
     "        alt_bit = 0 if start_bit == 1 else 1\n",
-    "        print(f'starting bit: {start_bit}, alt bit: {alt_bit}')\n",
+    "        print(f'\\tstarting bit: {start_bit}, alt bit: {alt_bit}')\n",
     "        \n",
     "        # get state lengths\n",
     "        state_lengths = self.get_state_length_list(self.data)\n",
@@ -278,7 +282,13 @@
     "                in discretized_data \n",
     "            for item in sublist\n",
     "        ])\n",
-    "        print(f'complete, discretized signal: {self.discretized_array.size} entries')\n",
+    "        \n",
+    "        reduction = 100 * (self.discretized_array.size / self.data.size)\n",
+    "        print(\n",
+    "            f'\\tcomplete, discretized signal: {self.discretized_array.size} entries ' + \n",
+    "            f'({reduction:0.2f}% of original)\\n'\n",
+    "            f'\\tprocessing time: {time.time() - start_time:0.4f} sec, hot damn.'\n",
+    "        )\n",
     "        \n",
     "\n",
     "    def search_sequence_numpy(self, arr, seq):\n",
@@ -327,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -339,8 +349,9 @@
       "\tset samples per bit: 20\n",
       "\tset header: [0 1 0 1 0 1 0 1 0 1]\n",
       "parsing .lvm file..\n",
-      "columns: ['X_Value', 'Voltage']\n",
+      "\tcolumns: ['X_Value', 'Voltage']\n",
       "\tcomplete, parsed file saved to: data\\qim_20kbps_10db_l2_v2.lvm_parsed.csv\n",
+      "importing data from parsed csv..\n",
       "\timported data, 4000000 rows\n"
      ]
     }
@@ -351,15 +362,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "starting bit: 0, alt bit: 1\n",
-      "complete, discretized signal: 68851 entries\n"
+      "discretizing signal..\n",
+      "\tstarting bit: 0, alt bit: 1\n",
+      "\tcomplete, discretized signal: 68851 entries (1.72% of original)\n",
+      "\tprocessing time: 0.3160 sec, hot damn.\n"
      ]
     }
    ],
@@ -369,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +391,7 @@
        "array([0, 0, 1, ..., 1, 1, 1])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,84 +420,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### signal finder"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def search_sequence_numpy(arr, seq):\n",
-    "    \"\"\" \n",
-    "    find sequence in an array \n",
-    "\n",
-    "    Parameters\n",
-    "    ----------    \n",
-    "    arr    : input 1D array\n",
-    "    seq    : input 1D array\n",
-    "\n",
-    "    Output\n",
-    "    ------    \n",
-    "    Output : 1D Array of indices in the input array that satisfy the \n",
-    "    matching of input sequence in the input array.\n",
-    "    In case of no match, an empty list is returned.\n",
-    "    \"\"\"\n",
-    "\n",
-    "    # Store sizes of input array and sequence\n",
-    "    Na, Nseq = arr.size, seq.size\n",
-    "\n",
-    "    # Range of sequence\n",
-    "    r_seq = np.arange(Nseq)\n",
-    "\n",
-    "    # Create a 2D array of sliding indices across the entire length of input array.\n",
-    "    # Match up with the input sequence & get the matching starting indices.\n",
-    "    M = (arr[np.arange(Na-Nseq+1)[:,None] + r_seq] == seq).all(1)\n",
-    "\n",
-    "    # Get the range of those indices as final output\n",
-    "    if M.any() >0:\n",
-    "        return np.where(np.convolve(M,np.ones((Nseq),dtype=int))>0)[0]\n",
-    "    else:\n",
-    "        return []  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "search_sequence_numpy(discretized_array, np.array(header))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "discretized_array[30078:30120]"
-   ]
   },
   {
    "cell_type": "code",
